--- a/clients.html
+++ b/clients.html
@@ -9,33 +9,15 @@
           class="transition-all duration-500 srch-style"
           x-model="clientSearch"
           @input="searchClients"
-          x-transition
-        />
+          x-transition />
       </div>
       <!-- CLIENTS CENTER TEXT -->
       <button
         @click="showAddClientModal = true; 
         if(showAddClientModal) $nextTick(() => $refs.addNewClientName.focus())"
         @keydown.escape.window="showAddClientModal = false"
-        class="butt-style flex !items-baseline justify-center"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="16"
-          height="16"
-          viewBox="0 0 23 23"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="mr-2 feather feather-user-plus"
-        >
-          <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-          <circle cx="8.5" cy="7" r="4"></circle>
-          <line x1="20" y1="8" x2="20" y2="14"></line>
-          <line x1="23" y1="11" x2="17" y2="11"></line>
-        </svg>
+        class="flex items-center butt-style">
+        <span hx-get="/public/images/user-plus.svg" hx-trigger="load" class="mr-1.5 flex items-center"></span>
         <span class="flex self-center">Add Client</span>
       </button>
     </div>
@@ -56,8 +38,7 @@
       <tbody class="bg-slate-600 text-vwhite-50 dark:bg-neutral-700">
         <template x-for="client in filteredClients" :key="client.id">
           <tr
-            class="transition duration-200 cursor-default hover:bg-slate-500 dark:hover:bg-neutral-600 dark:hover:text-white"
-          >
+            class="transition duration-200 cursor-default hover:bg-slate-500 dark:hover:bg-neutral-600 dark:hover:text-white">
             <td class="hidden" x-text="client.id"></td>
             <td class="p-2 text-sm round-left-border">
               <template x-if="client.isEditing">
@@ -96,8 +77,7 @@
                 <div>
                   <button
                     @click="saveClient(client)"
-                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-blue-400"
-                  >
+                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-blue-400">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
@@ -108,8 +88,7 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="feather feather-save"
-                    >
+                      class="feather feather-save">
                       <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
                       <polyline points="17 21 17 13 7 13 7 21"></polyline>
                       <polyline points="7 3 7 8 15 8"></polyline>
@@ -117,8 +96,7 @@
                   </button>
                   <button
                     @click="cancelEdit(client)"
-                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-red-400"
-                  >
+                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-red-400">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
@@ -129,8 +107,7 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="feather feather-x-circle"
-                    >
+                      class="feather feather-x-circle">
                       <circle cx="12" cy="12" r="10"></circle>
                       <line x1="15" y1="9" x2="9" y2="15"></line>
                       <line x1="9" y1="9" x2="15" y2="15"></line>
@@ -142,8 +119,7 @@
                 <div class="">
                   <button
                     @click="editClient(client)"
-                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-blue-400"
-                  >
+                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-blue-400">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
@@ -154,15 +130,13 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="feather feather-edit-2"
-                    >
+                      class="feather feather-edit-2">
                       <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
                     </svg>
                   </button>
                   <button
                     @click="removeClient(client.id)"
-                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-red-400"
-                  >
+                    class="p-1 text-sm transition duration-300 text-slate-100 hover:text-red-400">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
@@ -173,8 +147,7 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="feather feather-trash-2"
-                    >
+                      class="feather feather-trash-2">
                       <polyline points="3 6 5 6 21 6"></polyline>
                       <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
                       <line x1="10" y1="11" x2="10" y2="17"></line>
@@ -194,12 +167,10 @@
     x-show="showAddClientModal"
     x-transition.opacity.duration.300
     class="fixed inset-0 z-50 w-full h-full overflow-y-auto bg-gray-800 bg-opacity-50"
-    id="my-modal"
-  >
+    id="my-modal">
     <!-- Modal content -->
     <div
-      class="relative mx-auto text-center border rounded-md shadow-lg top-1/4 w-96 border-slate-300 bg-vdark-600 text-vwhite-50 dark:bg-zinc-900 dark:text-neutral-300"
-    >
+      class="relative mx-auto text-center border rounded-md shadow-lg top-1/4 w-96 border-slate-300 bg-vdark-600 text-vwhite-50 dark:bg-zinc-900 dark:text-neutral-300">
       <div @click.outside="showAddClientModal = false">
         <div class="p-6">
           <h3 class="mb-4 text-xl font-medium">Add Client</h3>
@@ -211,44 +182,38 @@
               type="text"
               placeholder="Name"
               class="w-full mb-2 modal-input-style"
-              required
-            />
+              required />
             <input
               x-model="newClient.company_name"
               name="company_name"
               type="text"
               placeholder="Company Name"
               class="w-full mb-2 modal-input-style"
-              required
-            />
+              required />
             <input
               x-model="newClient.address"
               name="address"
               type="text"
               placeholder="Address"
               class="w-full mb-2 modal-input-style"
-              required
-            />
+              required />
             <input
               x-model="newClient.email"
               name="email"
               type="email"
               placeholder="Email"
               class="w-full mb-2 modal-input-style"
-              required
-            />
+              required />
             <button
               type="submit"
-              class="w-full p-1 text-base font-medium transition-colors duration-200 rounded-md shadow-sm close-modal-button submit-button bg-sky-700 text-slate-100 hover:bg-sky-800 focus:outline-none focus:ring-2 focus:ring-sky-600"
-            >
+              class="w-full p-1 text-base font-medium transition-colors duration-200 rounded-md shadow-sm close-modal-button submit-button bg-sky-700 text-slate-100 hover:bg-sky-800 focus:outline-none focus:ring-2 focus:ring-sky-600">
               Add
             </button>
           </form>
           <div class="items-center mt-2">
             <button
               @click="showAddClientModal = false"
-              class="w-full p-1 text-base font-medium transition-colors duration-200 bg-red-800 rounded-md shadow-sm close-modal-button submit-button text-slate-100 hover:bg-red-900 focus:outline-none focus:ring-2 focus:ring-red-500"
-            >
+              class="w-full p-1 text-base font-medium transition-colors duration-200 bg-red-800 rounded-md shadow-sm close-modal-button submit-button text-slate-100 hover:bg-red-900 focus:outline-none focus:ring-2 focus:ring-red-500">
               Close
             </button>
           </div>
